--- a/server/views/edit.hbs
+++ b/server/views/edit.hbs
@@ -19,6 +19,8 @@
      <a href="/fetch">Show List</a>
      
  </form>
+         <br>
+     <a href="/logout">logout</a>
          </center>
  </body>
 </html>
