--- a/server/views/home.hbs
+++ b/server/views/home.hbs
@@ -30,6 +30,8 @@
             </tr>
             {{/each}}
         </table>
+            <br>
+     <a href="/logout">logout</a>
         </center>
         <script>
             
