--- a/Views/login.hbs
+++ b/Views/login.hbs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html>
  <head>
  <title>Intro to Node and MongoDB</title>
@@ -12,8 +12,10 @@
  <input type="text" name='username'  placeholder="Enter name..." required>
  <input type="text" name='password' placeholder="Enter salary..." required>
  <input type="submit" value="login">
-
+    
  </form>
+         <br>
+         <h3>{{msg}}</h3>
          </center>
  </body>
 </html>
