--- a/Views/index.hbs
+++ b/Views/index.hbs
@@ -17,6 +17,8 @@
      <a href="/fetch">Show List</a>
 
  </form>
+         <br>
+         <a href="/logout">logout</a>
          </center>
  </body>
 </html>
