--- a/server/views/home.hbs
+++ b/server/views/home.hbs
@@ -31,7 +31,8 @@
             {{/each}}
         </table>
             <br>
-     <a href="/logout">logout</a>
+            <h1>salksih</h1>
+        <a href="/logout">logout</a>
         </center>
         <script>
             
