--- a/server/index.hbs
+++ b/server/index.hbs
@@ -15,6 +15,8 @@
  <input type="submit" value="ADD">
      <br>
      <a href="/fetch">Show List</a>
+     <br>
+     <a href="/logout">logout</a>
 
  </form>
          </center>
