--- a/server/login.hbs
+++ b/server/login.hbs
@@ -10,7 +10,7 @@
  <form method="post" action="/loginUser">
  <label>Enter Your Information</label><br>
  <input type="text" name='username'  placeholder="Enter name..." required>
- <input type="text" name='password' placeholder="Enter salary..." required>
+ <input type="password" name='password' placeholder="Enter salary..." required>
  <input type="submit" value="login">
     
  </form>
